IHR2-2052 removed JDK11-only usages